--- a/src/app/formulario/formulario/formulario.page.html
+++ b/src/app/formulario/formulario/formulario.page.html
@@ -23,10 +23,12 @@
       <small class="error" *ngIf="(clienteForm.get('email').errors?.required || clienteForm.get('email').errors?.email) && form.submitted" >Email invalido, Informa um email@teste </small>
     </ion-item>
 
+
     <ion-item>
       <ion-label position="floating"> Telefone:</ion-label>
       <ion-input type="tel" [(ngModel)]="cliente.tel" formControlName="tel"></ion-input>
-      <small class="error"  *ngIf="(clienteForm.get('tel').errors?.required) && form.submitted">Informe numero de telefone</small>
+      <small class="error"  *ngIf="(clienteForm.get('tel').errors?.required || clienteForm.get('tel').errors?.maxlength || clienteForm.get('tel').errors?.minlength) && form.submitted">Informe número de telefone válido (Min: 8 díg)</small>
+
     </ion-item>
   
     <ion-button class="button" type="submit">Confirmar</ion-button>
